<resources>
    <string name="app_name">Chat App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent_chats">Recent Chats</string>
    <string name="recent_calls">Recent Calls</string>
    <string name="settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Login -->
    <string name="login">Login</string>
    <string name="privacy">By signing in you are agreeing our <font color="#FF036BB9">Term and privacy policy</font></string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="remember_password">Remember password</string>
    <string name="forget_password"><font color="#FF036BB9">Forget password</font></string>
    <string name="register">Register</string>
    <string name="logo">Logo</string>
    <string name="auth__login_fail">Login Fail</string>
    <string name="don_t_have_account_register_here">Don\'t have account? Register here</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="role">Role</string>
    <string name="chat">Chat</string>
    <string name="message_here">Message here</string>
    <string name="send">Send</string>
    <string name="online">Online</string>
</resources>