<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.vn.chat_app_client.presentation.auth.register.RegisterViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp"
        tools:context=".presentation.auth.register.RegisterActivity">

        <EditText
            android:id="@+id/phone_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_white"
            android:drawableEnd="@drawable/ic_phone"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:padding="8dp"
            android:text="@={viewModel.usernameInput}"
            app:layout_constraintBottom_toTopOf="@id/password_edit_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,TextFields" />

        <EditText
            android:id="@+id/password_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_white"
            android:drawableEnd="@drawable/ic_lock"
            android:ems="10"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:padding="8dp"
            android:text="@={viewModel.passwordInput}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_edit_txt"
            tools:ignore="LabelFor,TextFields" />

        <EditText
            android:id="@+id/firstNameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_white"
            android:ems="10"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/first_name"
            android:importantForAutofill="no"
            android:padding="8dp"
            android:text="@={viewModel.firstName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_edit_txt"
            tools:ignore="LabelFor,TextFields" />

        <EditText
            android:id="@+id/lastNameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_white"
            android:ems="10"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/last_name"
            android:importantForAutofill="no"
            android:padding="8dp"
            android:text="@={viewModel.lastName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstNameEdt"
            tools:ignore="LabelFor,TextFields" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_blue"
            android:fontFamily="@font/roboto_slab"
            android:onClick="@{() -> viewModel.registerAccount()}"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastNameEdt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>