<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.vn.chat_app_client.presentation.auth.AuthViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".presentation.auth.AuthActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:src="@drawable/ic_header"
            app:layout_constraintBottom_toTopOf="@id/login_txt"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/privacy_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_header" />

        <TextView
            android:id="@+id/privacy_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="72dp"
            android:fontFamily="@font/roboto_slab"
            android:gravity="center"
            android:text="@string/privacy"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/phone_edit_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_txt" />

        <EditText
            android:id="@+id/phone_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/rounded_white"
            android:drawableEnd="@drawable/ic_phone"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@={viewModel.usernameInput}"
            app:layout_constraintBottom_toTopOf="@id/password_edit_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/privacy_txt"
            tools:ignore="LabelFor,TextFields" />

        <EditText
            android:id="@+id/password_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/rounded_white"
            android:drawableEnd="@drawable/ic_lock"
            android:ems="10"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@={viewModel.passwordInput}"
            app:layout_constraintBottom_toTopOf="@id/login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_edit_txt"
            tools:ignore="LabelFor,TextFields" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:background="@drawable/rounded_button_blue"
            android:fontFamily="@font/roboto_slab"
            android:onClick="@{() -> viewModel.checkLogin()}"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_edit_txt" />

        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="@{() -> viewModel.navigateToRegister()}"
            android:text="@string/don_t_have_account_register_here"
            android:textColor="#535252"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>